--- a/2021_22/HALG/homework-03/homework.tex
+++ b/2021_22/HALG/homework-03/homework.tex
@@ -89,7 +89,7 @@
 	\begin{align*}
 		F:(A,B)\mapsto \tr(AB),\hs H:(A,B)\mapsto \tr(AB^\top).
 	\end{align*}
-	Both $F$ and $H$ are bilinear forms on $W$.
+	It is true that both $F$ and $H$ are bilinear forms on $W$.
 	\begin{proof}
 		Let $A,B,D,C\in W$ and $\lambda,\mu\in\R$. Then
 		\begin{align*}
@@ -111,16 +111,48 @@
 \end{claim*}
 
 \begin{claim*}[1c]
-	Neither $F$ nor $H$ gives an inner product on $W$.
+	It is true that, of $F$ and $H$, only $H$ gives an inner product space.
 	\begin{proof}
-		Note that an inner product is required to be positive definite. However,
+		To see that $F$ is not an inner product, consider the matrix 
 		\begin{align*}
-			F(-1_n,1_n)=\tr((-1_n)1_n)=-\tr(1_n)=-n < 0,
+			A=\begin{pmatrix}
+				0 &-1 \\ 
+				1 & 0
+			\end{pmatrix}.
 		\end{align*}
-		and
+		Then $F(A,A)=-2<0$. Thus $F$ is not positive definite. For $H$, clearly 
+		$H(0_n,0_n)=0$. To see $H(A,A)>0$ for $A=(a_{ij})\not=0$, observe
 		\begin{align*}
-			H(-1_n,1_n)=\tr((-1_n)1_n^\top)=-\tr(1_n)=-n<0.
+			\tr(AA^\top) = \sum_{i=1}^n \sum_{j=1}^n a_{ij}^2 > 0
+		\end{align*} 
+		since the diagonal entries of the product are just the dot products of the column 
+		vectors with themselves. Note in general $\tr(AB)=\tr(BA)$ by \emph{Exercise 41} 
+		and $\tr A^\top=\tr A$ as the transpose leaves the diagonal unchanged. Now clearly, 
+		\begin{align*}
+			H(A,B) = \tr(AB^\top) = \tr((AB^\top)^\top)  = \tr(A^\top B) = \tr(BA^\top) = H(B,A).
+		\end{align*} 
+		We have shown that $H$ is a positive definite symmetric bilinear form, i.e. an inner 
+		product.
+	\end{proof}
+\end{claim*}
+
+\begin{claim*}[2]
+	Let $S,T:V\to V$ be commuting $F$-linear endomorphisms of a finite dimensional non-zero vector space $V$ over an
+	algebraically closed field $F$. Then $S$ and $T$ have a common non-zero eigenvector.
+	\begin{proof}
+		Let $\vec v\in V$ be an eigenvector of $T$, i.e. $T(\vec v) = \lambda \vec v$ for some $\lambda\in F$.
+		Then 
+		\begin{align*}
+			T(S(\vec v)) = S(T(\vec v)) = S(\lambda\vec v) = \lambda S(\vec v),
 		\end{align*}
+		i.e. $S$ preserves eigenvectors of $T$. By \emph{Theorem 4.5.4}, we know that $T$ has
+		a non-zero eigenvector $\vec v$ with eigenvalue $\lambda\in F$. Consider the eigenspace 
+		$E=E(\lambda, F)$. Clearly $\dim E \geq 1$. Now observe that the restriction 
+		$\eval{S}{E}:E\to E$ is an $F$-linear endomorphism of the finite dimensional non-zero vector subspace $E\subseteq V$.
+		Invoking \emph{Theorem 4.5.4} once more, we obtain an eigenvector $\vec u\in E$ of $\eval{S}{E}$ 
+		with non-zero eigenvalue $\mu\in F$.
+		Since $\vec u\in E$ it is an eigenvector of $T$. Further, since $\eval SE(\vec u) = \mu\vec u$, 
+		we have $S(\vec u)=\mu \vec u$, i.e. $\vec u$ is a non-zero eigenvector of $S$, too.
 	\end{proof}
 \end{claim*}
 
